--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="row">
             <button class="button opr">AC</button>
-            <button class="button opr">DEL</button>
+            <button class="button opr">DE</button>
             <button class="button opr">%</button>
             <button class="button opr">/</button>
         </div>
